--- a/vtiger7/vtigercrm/layouts/v7/modules/QuotingTool/resources/js/views/right_panel/content_properties.html
+++ b/vtiger7/vtigercrm/layouts/v7/modules/QuotingTool/resources/js/views/right_panel/content_properties.html
@@ -11,7 +11,8 @@
             </div>
 
             <!-- Title -->
-            <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Properties' | translate }}</h4>
+            <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Properties' | translate }}<span class="icon-helptext hide properties-helptext">i</span></h4>
+
         </div>
 
         <!-- Content -->
@@ -97,7 +98,8 @@
             </div>
 
             <!-- Title -->
-            <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Product block' | translate }}</h4>
+            <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Product block' | translate }}<span class="icon-helptext hide product-helptext">i</span></h4>
+
         </div>
 
         <!-- Content -->
@@ -176,7 +178,8 @@
             </div>
 
             <!-- Title -->
-            <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Related block' | translate }}</h4>
+            <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Related block' | translate }}<span class="icon-helptext hide related-helptext">i</span></h4>
+
         </div>
 
         <!-- Content -->
@@ -254,7 +257,8 @@
             </div>
 
             <!-- Title -->
-            <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Other information' | translate }}</h4>
+            <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Other information' | translate }}<span class="icon-helptext hide other-helptext">i</span></h4>
+
         </div>
 
         <!-- Content -->
@@ -265,7 +269,7 @@
                 <!--Custom functions-->
                 <div>
                     <div class="doctool-subhead m--bottom-sm">
-                        <span>Custom functions</span>
+                        <span>Custom functions<span class="icon-helptext hide properties-helptext">i</span></span>
                     </div>
 
                     <div class="m--bottom">
@@ -287,7 +291,7 @@
                 <!--Custom fields-->
                 <div>
                     <div class="doctool-subhead m--bottom-sm">
-                        <span>Custom fields</span>
+                        <span>Custom fields<span class="icon-helptext hide properties-helptext">i</span></span>
                     </div>
 
                     <div class="m--bottom">
@@ -308,7 +312,7 @@
                 <!--Company information-->
                 <div>
                     <div class="doctool-subhead m--bottom-sm">
-                        <span>Company information</span>
+                        <span>Company information<span class="icon-helptext hide properties-helptext">i</span></span>
                     </div>
 
                     <div class="m--bottom">
