--- a/vtiger7/vtigercrm/layouts/v7/modules/QuotingTool/resources/js/views/right_panel/general_decision.html
+++ b/vtiger7/vtigercrm/layouts/v7/modules/QuotingTool/resources/js/views/right_panel/general_decision.html
@@ -114,7 +114,7 @@
             </div>
 
             <!-- Title -->
-            <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Others' | translate }}</h4>
+            <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Others' | translate }}<span class="icon-helptext hide other-helptext" id="other-helptext">i</span></h4>
         </div>
 
         <!-- Content -->
@@ -126,6 +126,7 @@
                 <div>
                     <div class="doctool-subhead m--bottom-sm">
                         {{ 'Notes' | translate }}
+                        <span class="icon-helptext hide properties-helptext ">i</span>
                     </div>
 
                     <div id="quoting_tool-notes-field">
@@ -141,6 +142,7 @@
 
                     <div class="doctool-subhead m--bottom-sm">
                         {{ 'Attachments' | translate }}
+                        <span class="icon-helptext hide properties-helptext ">i</span>
                     </div>
 
                     <div id="quoting_tool-attachments-fields" class="quoting_tool-accept-decline-fields">
@@ -163,7 +165,7 @@
                 <!--Expire in Days-->
                 <div>
                     <div class="doctool-subhead m--bottom-sm">
-                        <span>{{ 'Expire in Days' | translate }}</span>
+                        <span>{{ 'Expire in Days' | translate }}<span class="icon-helptext hide properties-helptext ">i</span></span>
                     </div>
 
                     <div class="m--bottom">
@@ -176,7 +178,7 @@
                 <!--Status template-->
                 <div>
                     <div class="doctool-subhead m--bottom-sm">
-                        <span>{{ 'Status' | translate }}</span>
+                        <span>{{ 'Status' | translate }}<span class="icon-helptext hide properties-helptext">i</span></span>
                     </div>
 
                     <div class="m--bottom">
@@ -202,7 +204,7 @@
             </div>
 
             <!-- Title -->
-            <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Auth.net Integration' | translate }}</h4>
+            <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Auth.net Integration' | translate }}<span class="icon-helptext hide properties-helptext">i</span></h4>
         </div>
 
         <!-- Content -->
