--- a/vtiger7/vtigercrm/layouts/v7/modules/QuotingTool/resources/js/views/popups/email_template.html
+++ b/vtiger7/vtigercrm/layouts/v7/modules/QuotingTool/resources/js/views/popups/email_template.html
@@ -11,7 +11,9 @@
                     <h4 class="modal-title">{{ 'Email Template' | translate }}</h4>
                 </div>
             </div>
-            <div class="modal-body" style="margin: 10px;">
+
+            <div class="modal-body" style="margin: 10px; text-align: center">
+                <span class="icon-helptext hide email-helptext" id="email-helptext">i</span>
                 <div class="form-group">
                     <input type="text" class="form-control input-large" name="tmp_email_subject"
                            placeholder="{{ 'Subject' | translate }}"
