--- a/vtiger7/vtigercrm/layouts/vlayout/modules/QuotingTool/resources/js/views/right_panel/content_blocks.html
+++ b/vtiger7/vtigercrm/layouts/vlayout/modules/QuotingTool/resources/js/views/right_panel/content_blocks.html
@@ -3,7 +3,7 @@
      ng-click="addBlock(block)" data-id="{{block.layout.id}}" on-finish-render-item="ngRepeatBlockFinished">
     <span class="btn--sq-icon__bd" title="{{ block.layout.name | translate}}">
         <i class="icon icon--xbig icon--clear-background-image {{block.layout.icon}}"></i>
-        <span ng-if="block.layout.icon_supplement" class="icon-supplement">{{ block.layout.icon_supplement }}</span>
+        <!--<span ng-if="block.layout.icon_supplement" class="icon-supplement">{{ block.layout.icon_supplement }}</span>-->
         <span class="btn--sq-icon__text">{{ block.layout.name | translate}}</span>
     </span>
 </div>
