--- a/vtiger7/vtigercrm/layouts/v7/modules/QuotingTool/resources/js/views/right_panel/content.html
+++ b/vtiger7/vtigercrm/layouts/v7/modules/QuotingTool/resources/js/views/right_panel/content.html
@@ -6,7 +6,7 @@
             </li>
             <li ng-class="{'active': section == SECTIONS.WIDGETS}">
                 <a href="" ng-click="showSection(SECTIONS.WIDGETS)">{{ 'Fields' | translate }}</a>
-                <span class="icon-helptext hide field-helptext " id="field-helptext" >i</span>
+                <span class="icon-helptext hide" id="field-helptext" >i</span>
             </li>
             <li ng-class="{'active': section == SECTIONS.TOKENS}">
                 <a href="" ng-click="showSection(SECTIONS.TOKENS)">{{ 'Properties' | translate }}</a>
