--- a/vtiger7/vtigercrm/layouts/v7/modules/QuotingTool/resources/js/views/right_panel/content_properties.html
+++ b/vtiger7/vtigercrm/layouts/v7/modules/QuotingTool/resources/js/views/right_panel/content_properties.html
@@ -11,7 +11,7 @@
             </div>
 
             <!-- Title -->
-            <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Properties' | translate }}<span class="icon-helptext hide properties-helptext">i</span></h4>
+            <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Properties' | translate }}<span class="icon-helptext hide" id="properties-helptext">i</span></h4>
 
         </div>
 
@@ -98,7 +98,7 @@
             </div>
 
             <!-- Title -->
-            <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Product block' | translate }}<span class="icon-helptext hide product-helptext">i</span></h4>
+            <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Product block' | translate }}<span class="icon-helptext hide" id="product-helptext">i</span></h4>
 
         </div>
 
@@ -178,7 +178,7 @@
             </div>
 
             <!-- Title -->
-            <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Related block' | translate }}<span class="icon-helptext hide related-helptext">i</span></h4>
+            <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Related block' | translate }}<span class="icon-helptext hide" id="related-helptext">i</span></h4>
 
         </div>
 
@@ -257,7 +257,7 @@
             </div>
 
             <!-- Title -->
-            <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Other information' | translate }}<span class="icon-helptext hide other-helptext">i</span></h4>
+            <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Other information' | translate }}<span class="icon-helptext hide" id="other-information-helptext">i</span></h4>
 
         </div>
 
@@ -269,7 +269,7 @@
                 <!--Custom functions-->
                 <div>
                     <div class="doctool-subhead m--bottom-sm">
-                        <span>Custom functions<span class="icon-helptext hide properties-helptext">i</span></span>
+                        <span>Custom functions<span class="icon-helptext hide" id="custom-functions-helptext">i</span></span>
                     </div>
 
                     <div class="m--bottom">
@@ -291,7 +291,7 @@
                 <!--Custom fields-->
                 <div>
                     <div class="doctool-subhead m--bottom-sm">
-                        <span>Custom fields<span class="icon-helptext hide properties-helptext">i</span></span>
+                        <span>Custom fields<span class="icon-helptext hide" id="custom-fields-helptext">i</span></span>
                     </div>
 
                     <div class="m--bottom">
@@ -312,7 +312,7 @@
                 <!--Company information-->
                 <div>
                     <div class="doctool-subhead m--bottom-sm">
-                        <span>Company information<span class="icon-helptext hide properties-helptext">i</span></span>
+                        <span>Company information<span class="icon-helptext hide" id="company-information-helptext">i</span></span>
                     </div>
 
                     <div class="m--bottom">
