--- a/vtiger7/vtigercrm/layouts/v7/modules/QuotingTool/resources/js/views/right_panel/general_themes.html
+++ b/vtiger7/vtigercrm/layouts/v7/modules/QuotingTool/resources/js/views/right_panel/general_themes.html
@@ -13,7 +13,7 @@
             <!-- Title -->
             <h4 class="block-section__name pull-left ellipsis" ng-click="toggleSection($event)">
                 {{ 'Background' | translate }}
-                <span class="icon-helptext hide background-helptext" id="background-helptext">i</span>
+                <span class="icon-helptext hide" id="background-helptext">i</span>
             </h4>
         </div>
 
