--- a/vtiger7/vtigercrm/layouts/v7/modules/QuotingTool/resources/js/views/popups/email_template.html
+++ b/vtiger7/vtigercrm/layouts/v7/modules/QuotingTool/resources/js/views/popups/email_template.html
@@ -13,7 +13,7 @@
             </div>
 
             <div class="modal-body" style="margin: 10px; text-align: center">
-                <span class="icon-helptext hide email-helptext" id="email-helptext">i</span>
+                <span class="icon-helptext hide" id="email-helptext">i</span>
                 <div class="form-group">
                     <input type="text" class="form-control input-large" name="tmp_email_subject"
                            placeholder="{{ 'Subject' | translate }}"
