Icon_HelpText_10PM_25_04_2018

--- a/vtiger7/vtigercrm/layouts/v7/modules/QuotingTool/resources/js/views/right_panel/content_properties.html
+++ b/vtiger7/vtigercrm/layouts/v7/modules/QuotingTool/resources/js/views/right_panel/content_properties.html
@@ -11,7 +11,8 @@
             </div>
 
             <!-- Title -->
-            <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Properties' | translate }}<span class="icon-helptext hide" id="properties-helptext">i</span></h4>
+            <h4 style="display: inline" class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Properties' | translate }}</h4>
+            <span class="icon-helptext hide" id="properties-helptext">i</span>
 
         </div>
 
@@ -98,7 +99,8 @@
             </div>
 
             <!-- Title -->
-            <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Product block' | translate }}<span class="icon-helptext hide" id="product-helptext">i</span></h4>
+            <h4 style="display: inline" class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Product block' | translate }}</h4>
+            <span class="icon-helptext hide" id="product-helptext">i</span>
 
         </div>
 
@@ -178,8 +180,8 @@
             </div>
 
             <!-- Title -->
-            <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Related block' | translate }}<span class="icon-helptext hide" id="related-helptext">i</span></h4>
-
+            <h4 style="display: inline" class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Related block' | translate }}</h4>
+            <span class="icon-helptext hide" id="related-helptext">i</span>
         </div>
 
         <!-- Content -->
@@ -257,7 +259,8 @@
             </div>
 
             <!-- Title -->
-            <h4 class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Other information' | translate }}<span class="icon-helptext hide" id="other-information-helptext">i</span></h4>
+            <h4 style="display: inline" class="block-section__name ellipsis" ng-click="toggleSection($event)">{{ 'Other information' | translate }}</h4>
+            <span class="icon-helptext hide" id="other-information-helptext">i</span>
 
         </div>
 
