--- a/vtiger7/vtigercrm/layouts/v7/modules/QuotingTool/resources/js/views/right_panel/content_blocks.html
+++ b/vtiger7/vtigercrm/layouts/v7/modules/QuotingTool/resources/js/views/right_panel/content_blocks.html
@@ -21,8 +21,8 @@
     <span class="btn--sq-icon__bd" title="{{ block.layout.name | translate}}">
         <i class="icon icon--xbig icon--clear-background-image {{block.layout.icon}}"></i>
 
-        <span ng-if="block.layout.icon_supplement" class="icon-supplement">{{ block.layout.icon_supplement }}</span>
-        <span ng-if="block.layout.icon_helptext" class="icon-helptext">{{ block.layout.icon_helptext }}</span>
+        <span ng-if="block.layout.icon_supplement" class="icon-supplement ">{{ block.layout.icon_supplement }}</span>
+        <span ng-if="block.layout.icon_helptext" class="icon-helptext hide">{{ block.layout.icon_helptext }}</span>
 
         <span ng-if="block.layout.name == 'Related module'" class="btn--sq-icon__text break-line" id="breakline-related">{{ block.layout.name | translate}}</span>
         <span ng-if="block.layout.name == 'Pricing table'" class="btn--sq-icon__text break-line" id="breakline-pricing">{{ block.layout.name | translate}}</span>
